# ISP_TEST_PERF

./: README.md  agregator.cpp  c3-ipa.cpp  graph.py  many_runs.sh  parse_cmp.py  parser.sh  reorder.py  report  test_script.measure  tramp3d-v4.s
c3_reorder_plugin/: Makefile  compare_nm_and_pass.py  di  make_order.py  order  order.new  order.sorted  plugin_dump_regular.txt
demangle/: README.md  same_names.txt  test_demangle.py
rebuild_script/: make.patch  rebuild_script
tests/check-freq/: graph.py  test_script
utility/: .clang-format  CMakeLists.txt  Readme.md
utility/QAP/: cILSAssignment.cpp
utility/include/: Algorithm.hpp  Algos.hpp  FuncData.hpp  Metrics.hpp  NMParser.hpp  PerfParser.hpp  algorithm.hpp  algos.hpp  funcData.hpp  nmParser.hpp  perfParser.hpp  traceReader.hpp
utility/results/: 1024_cycles_250k_127.edges  readme.md
utility/source/: Algorithm.cpp  FunctionData.cpp  Metrics.cpp  NMParser.cpp  PerfParser.cpp  Subprocess.cpp  algorithm.cpp  main.cpp  nmParser.cpp  perfParser.cpp  subprocess.cpp
utility/source/algos/: Annealing.cpp  Percise.cpp  QAP.cpp  annealing.cpp  percise.cpp
